TFP-2765 samler henting av oppgavedto og status i egen tjeneste